--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "simple-git": "^3.27.0"
+    "simple-git": "^3.27.0",
+    "socket.io": "^4.8.1"
   }
 }
